This should get around the 'Do you really wish to run this command?' prompt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
             cd ${{ secrets.PROJECT_PATH }}
             git pull
             composer dump-autoload
-            php artisan migrate
+            php artisan migrate --force
